# sentinel_ai_news

./: .env.example  .gitignore  DESIGN.md  README.md  bootstrap.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 35a4c06f7666_add_urltoimage_column.py
notebooks/: fetch_news.ipynb
src/: logger.py
src/agents/: graph.py  nodes.py  state.py
src/api/: schemas.py
src/config/: config.py
src/db/: models.py  session.py
src/logger/: custom_logger.py
src/services/: news_fetcher.py
tests/: test_graph.py
